--- a/vercel.json
+++ b/vercel.json
@@ -2,18 +2,22 @@
   "version": 2,
   "builds": [
     {
-      "src": "index.js",
+      "src": "apps.js",
       "use": "@vercel/node"
+    },
+    {
+      "src": "index.html",
+      "use": "@vercel/static"
     }
   ],
   "routes": [
     {
-      "src": "/generate-plugin",
-      "dest": "/index.js"
+      "src": "/",
+      "dest": "index.html"
     },
     {
-      "src": "/download/(.*)",
-      "dest": "/index.js"
+      "src": "/generate-plugin",
+      "dest": "apps.js"
     }
   ]
 }
